
* Added a regression test for RT #36584
- https://rt.cpan.org/Ticket/Display.html?id=36584
- the bug seems to be fixed in trunk.

* Added a regression test for RT #36309
- https://rt.cpan.org/Ticket/Display.html?id=36309
- Testing for allowedcommentchars.
- the bug seems to be fixed in trunk.

* Converted t/03comments.t to Test::More and did other cleanups in preparation 
of solving a few bugs.

Version 2.45:  ( Sat Dec 27 17:21:45 IST 2008 )
-----------------------------------------------

* Fixed bug #1230339:
- https://sourceforge.net/tracker/index.php?func=detail&aid=1230339&group_id=6926&atid=106926
- Can't store and retrive "\nEOT\n"
- Fixed by checking for the existence of the here-doc terminator in the 
string, and if so appending more characters.

* Fixed bug #1565180
- https://sourceforge.net/tracker/index.php?func=detail&aid=1565180&group_id=6926&atid=106926
- -nocase breaks -default.
- If a default-values section is specified, then -nocase did not look it up
if it's not lowercase.

* Fixed bug #1831654
- https://sourceforge.net/tracker/index.php?func=detail&aid=1831654&group_id=6926&atid=106926
- multiline-values are tainted.
- Added a test as t/17untainted-multiline-values.t

Version 2.44:  ( Thu Dec 25 11:44:07 IST 2008 )
-----------------------------------------------

* Eliminated an assignment of $VERSION into itself to "get rid of warnings".
Only caused warnings at Build.PL, and is unnecessary now that we
"use vars".

Version 2.43:  ( Thu Dec  4 18:56:02 IST 2008 )
-----------------------------------------------

* Placed IniFiles.pm under lib/Config/IniFiles.pm.

* Added a Build.PL file for the distribution.

* Moved the ChangeLog to its own file - Changes.

* Made the README contain the useful information and nothing else - previously
it was a copy of the module's entire POD.

* Added a regression test for:

https://sourceforge.net/tracker/index.php?func=detail&aid=778593&group_id=6926&atid=106926
